tests/neg/parsing-unbalance-fence.jo
def test =
  (1 + 3 * 5 p

def bar = 7 + 9  // error
